# ChangeLog for app-crypt/rotix
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/rotix/ChangeLog,v 1.10 2008/04/21 16:34:24 phreak Exp $

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  21 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  +files/0.83-respect-CFLAGS-and-dont-strip.patch, rotix-0.83.ebuild:
  Add patch to not strip binary and respect CFLAGS

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> rotix-0.83.ebuild:
  Masked rotix-0.83.ebuild stable for ppc

  10 Dec 2003; Jon Portnoy <avenj@gentoo.org> rotix-0.83.ebuild:
  AMD64 keyword.

*rotix-0.83 (20 Dec 2002)

   20 Dec 2002; Jon Portnoy <avenj@gentoo.org> rotix-0.83.ebuild :

   Initial import.