@@ -1,6 +1,6 @@
 AUX 0.83-respect-CFLAGS-and-dont-strip.patch 391 RMD160 1644f507d6628a5c20bb179175550a2e54407d2c SHA1 46be3a6ca03f0a8d471602d9cfd8494505569ed8 SHA256 698b23b4b75de8b7767dd364f4a4f04ff9125f607d583d4be0e4943113bc0b15
 AUX rotix-0.83-interix.patch 345 RMD160 572d3980e8b52f281c50e0f1327b4449df95e2c1 SHA1 1e7ab271a325b0fd48a4d260265c6594107a2e40 SHA256 cc5797874b228e563493200f2fe0d7d0f9c1877cba3722d7caa41278077b57cb
 DIST rotix-0.83.tar.bz2 14685 RMD160 a7f52710e33d21a502a162b1d3836a83ae95588e SHA1 db886b54ecbe608efdd0e4f97321bcc49216fd23 SHA256 f25eae09e1c6eb95f44aec7a2aeaf9b4822da0304909e70149fda4603f1368bd
-EBUILD rotix-0.83.ebuild 973 RMD160 984650b334f17164e388a849a9bcdf2ccc130e43 SHA1 6632a4b02f740d7585dfaa32a762534179472b4f SHA256 d600c5b06848f4f569a9700f9e3c71c8e435fa0b4d4d7fb4c7adb1161b6ceab5
-MISC ChangeLog 980 RMD160 e4d6895f549f768d9d7452ca93c256c15717ea39 SHA1 b0ef2cc8f4578ba229b22d59193e1b9961418df6 SHA256 132d6551aef6e895619995935a2cfeefe37280afd0202cac84b02596f0e3701b
+EBUILD rotix-0.83.ebuild 979 RMD160 4ca8159b462abf943d96c7f916af7c76893e16fe SHA1 3a6bd0081bad872d5e35ac0c852dea8a2ea299c3 SHA256 f659b7d71b34c092ef72be141d07333a337e5fd0fa88754a1bb8d5f3fcb876d5
+MISC ChangeLog 1080 RMD160 020c8f6e3a7170424a0f18360cb5d7c783155106 SHA1 f17a6cd064d4d7f65bb353f095a7e9050d867164 SHA256 bdb17cd9cc5d421dc281d64fd2c90bf27e599b68ffe23cca486251642e684fc2
 MISC metadata.xml 290 RMD160 b9b86283c09349c8827faef7d3ef5f724a248e77 SHA1 ae1c8e62d75c94ff50b8a5391afb6008460963aa SHA256 380e26e9262298b9cb31e863a9ab641f6fbdc8c50bda2cf2e47fd399f9cb5e85
