@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/rotix
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/rotix/ChangeLog,v 1.10 2008/04/21 16:34:24 phreak Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/rotix/ChangeLog,v 1.11 2009/10/14 00:58:35 halcy0n Exp $
+
+  14 Oct 2009; Mark Loeser <halcy0n@gentoo.org> rotix-0.83.ebuild:
+  QA fixes; unquoted variables
 
   21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Fix up metadata.xml. If there's no maintainer for the package, the metadata
